--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js"></script>
     <script defer src="./main.js"></script>
 
-    <title>Document</title>
+    <title>Dostonbek</title>
 </head>
 
 <body>
@@ -59,7 +59,6 @@
                             <hr class="hr2">
                         </div>
                     </div>
-                    <p class="slide-help">Scroll for next slide <i class="fa-solid fa-chevron-right fa-shake"></i>
                     </p>
                 </div>
                 <div class="swiper-slide">
